# Celsius

./: .gitignore  README.md  runMac.bash
celsius/: Cargo.toml
celsius/.cargo/: config.toml
celsius/gb-core/: Cargo.toml
celsius/gb-core/src/: bus.rs  catridge.rs  cpu.rs  cpu_V2.rs  joypad.rs  lib.rs  ppu.rs  ram.rs
celsius/gb-esp32-s3/: Cargo.toml
celsius/gb-esp32-s3/src/: main.rs
celsius/gb-sdl-desktop/: Cargo.toml
celsius/gb-sdl-desktop/src/: main.rs
